# clutter-gst

./: NEWS  autogen.sh  clutter-gst.doap  configure.ac
clutter-gst/: Makefile.am  clutter-gst-auto-video-sink.c  clutter-gst-content.c  clutter-gst-player.c  clutter-gst-video-sink.c
clutter-gst/shaders/: I420.h  YV12.h
doc/reference/: Makefile.am  clutter-gst-docs.sgml
examples/: Makefile.am
tests/: Makefile.am
